--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>White LMS</title>
+    <!-- Font Awesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/e871c32ce0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
